Пофиксил json, изменил заголовок

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "eslintplugin",
     "eslint-plugin",
     "filenames",
-    "folder name",
+    "folder name"
   ],
   "author": "Artyom Resh",
   "license": "ISC",
